--- a/Projet/css/Style.css
+++ b/Projet/css/Style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
 }
-
+/*---Header Style---*/
 #menu {
     position: fixed;
     display: flex;
@@ -44,6 +44,8 @@
     color: goldenrod;
 }
 
+/*---Hero Style---*/
+
 #backround-cover{
     width: 100%;
     height: 100vh; 
@@ -73,7 +75,7 @@ margin-left: 5%;
 
 .btn-shop{
     position: absolute;
-
+    border: none;
     margin-left: 5%;
     padding: 10PX;
     border-color: black;
@@ -92,6 +94,8 @@ margin-left: 5%;
     color: #E9BD8C;
     top: 71%;
 }
+
+/*---Top Products Section Style---*/
 .title{
     font-size:60px;
     display: flex;
@@ -99,19 +103,210 @@ margin-left: 5%;
     margin-top: 5%;
 }
 
-.img-footer{
+
+/*---About Us Section Style---*/
+
+.about-container{
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.about-title{
+    position: absolute;
+    color: white;
+    font-size: 60px;
+    top: 16%;
+}
+
+.about-text{
+    display: flex;
+    text-align: center;
+    position: absolute;
+    color: #B9B9B9;
+    font-size: 30px;
+    top: 35%;
+}
+
+.about-btn{
+    position: absolute;
+    border: none;
+    padding: 10PX;
+    border-color: black;
+    border-radius: 10PX;
+    background-color: #933C24;
+    color: white;
+    font-size: 30px;
+    top: 70%;
+}
+.about-btn:hover{
+    background-color: #642513;
+}
+
+
+/*---More-container---*/
+
+.More-container{
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.more-title{
+    position: absolute;
+    color: #933C24;
+    font-size: 48px;
+    text-align: center;
+    top: 10%;
+}
+
+.more-text{
+    display: flex;
+    text-align: center;
+    position: absolute;
+    color: #5D5D5D;
+    font-size: 30px;
+    top: 40%;
+}
+
+.more-btn{
+    position: absolute;
+    border: none;
+    padding: 10PX;
+    border-color: black;
+    border-radius: 10PX;
+    background-color: #933C24;
+    color: white;
+    font-size: 30px;
+    top: 75%;
+}
+.more-btn:hover{
+    background-color: #642513;
+}
+
+
+/*---Footer Style---*/
+#footer-container .background-footer .img-footer{
     width: 50%;
     display: block;
 }
-.img-footer2{
-    display: flex;
+#footer-container .background-footer .img-footer2{
     margin-left: auto;
     width: 50%;
     display: block;
 
 }
-.footer-container{
+
+#footer-container .background-footer{
+    position: relative;
     display: flex;
     flex-direction: row;
-    align-items: center;
 }
+
+#footer-container .copyright{
+    position: absolute;
+    font-size: 17px;
+    color: #737373;
+    top: 90%;
+    left: 50%;
+    transform: translateX(-50%);
+    
+} 
+.logo-footer{
+    position: absolute;
+    width: 5%;
+    height: auto;
+    margin-left: 14%;
+    padding: 40px;
+}
+.title-folowus{
+    position: absolute;
+    color: #d2a679;
+    margin-top: 80px;
+    margin-left: 66%;
+}
+
+.social-icons {
+    position: absolute;
+    margin-top: 80px;
+    margin-left: 73%;
+}
+
+.fb-footer, .ig-footer, .pi-footer, .wh-footer {
+    width: 24px; 
+    margin: 0 10px; 
+    margin-bottom: 20px;
+}
+
+.background-footer::after {
+    content: '';
+    position: absolute;
+    left: 50%; 
+    transform: translateX(-50%); 
+    display: block;
+    width: 70%;
+    height: 2px;
+    top: 35%;
+    background-color: #d2a679; 
+}
+
+.title-footer{
+    position: absolute;
+    color: #E9BD8C;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10%;
+    margin-left: 5%;
+}
+.title-1{
+    margin: 0 150px; 
+}
+
+.mini-title-footer1{
+    position: absolute;
+    color: white;
+    margin-top: 13%;
+    margin-left: 15%;
+    
+}
+.title-2{
+    line-height: 1.4;
+}
+.mini-title-footer2{
+    position: absolute;
+    color: white;
+    margin-top: 13%;
+    margin-left: 43.2%;
+    
+}
+.mini-img-footer{
+    position: absolute;
+    display: flex;
+    flex-direction:column;
+    margin-top: 13%;
+    margin-left: 70%;
+}
+.mini-img-footer img{
+    margin-bottom: 10px;
+    width: 90px;
+    height: 60px;
+    border-radius: 3px;
+}
+.mini-title-footer3{
+    position: absolute;
+    margin-top: 13%;
+    margin-left: 77%; 
+}
+.title-3-1{
+    color: aliceblue;
+    margin-bottom: 28px;
+} 
+.title-3-2{
+    color: aliceblue;
+} 
+.title-mini-3-1{
+    color: #E9BD8C;
+    margin-bottom: 6px;
+}
+
+
